--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,28 @@ nav {
 .navbar {
     --bs-navbar-nav-link-padding-x: 1rem;
     --bs-navbar-padding-y: 0rem;
-    background-color: rgba(255, 255, 255, 0);
+    background: transparent;
+    -webkit-transition: all 0.6s ease-out;
+    -moz-transition: all 0.6s ease-out;
+    -o-transition: all 0.6s ease-out;
+    -ms-transition: all 0.6s ease-out;
+    transition: all 0.6s ease-out;
+}
 
+.navbar-volver {
+    --bs-navbar-nav-link-padding-x: 1rem;
+    --bs-navbar-padding-y: 0rem;
+    background: var(--clr-primary);
+    -webkit-transition: all 0.6s ease-out;
+    -moz-transition: all 0.6s ease-out;
+    -o-transition: all 0.6s ease-out;
+    -ms-transition: all 0.6s ease-out;
+    transition: all 0.6s ease-out;
+}
+
+.navbar.scrolled {
+    opacity: 0.9;
+    background: transparent;
 }
 
 .nav-item {
