--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    overflow: hidden;
+    /*overflow: hidden;*/
+    overflow-y: scroll;
 }
 
 img,
@@ -55,28 +56,18 @@ nav {
 .navbar {
     --bs-navbar-nav-link-padding-x: 1rem;
     --bs-navbar-padding-y: 0rem;
-    background: transparent;
+
     -webkit-transition: all 0.6s ease-out;
     -moz-transition: all 0.6s ease-out;
     -o-transition: all 0.6s ease-out;
     -ms-transition: all 0.6s ease-out;
     transition: all 0.6s ease-out;
-}
+    z-index: 999;
+    position: fixed;
+    right: 0;
+    left: 0;
+    /*min-height: 50px;*/
 
-.navbar-volver {
-    --bs-navbar-nav-link-padding-x: 1rem;
-    --bs-navbar-padding-y: 0rem;
-    background: var(--clr-primary);
-    -webkit-transition: all 0.6s ease-out;
-    -moz-transition: all 0.6s ease-out;
-    -o-transition: all 0.6s ease-out;
-    -ms-transition: all 0.6s ease-out;
-    transition: all 0.6s ease-out;
-}
-
-.navbar.scrolled {
-    opacity: 0.9;
-    background: transparent;
 }
 
 .nav-item {
@@ -89,11 +80,12 @@ nav {
 }
 
 .navbar-color-1 {
-    background-color: var(--clr-primary);
+    /*background-color: var(--clr-primary);*/
+    background: transparent;
 }
 
 .navbar-color-2 {
-    color: #626262;
+    background-color: rgb(137, 43, 226);
 }
 
 .navbar-nav {
@@ -125,7 +117,7 @@ nav {
 
 .container-main {
     height: 100vh;
-    overflow: auto;
+    /*overflow: auto;*/
     width: 100%;
     /*
     overflow-y: auto;
@@ -142,7 +134,8 @@ nav {
     background-position: center center;
     /*background-size: contain;*/
     background-size: 100% 100%;
-    min-height: 50vh;
+    /*min-height: 50vh;*/
+    overflow: hidden;
     /*background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
     background: linear-gradient(60deg, rgba(255, 255, 255, 0.678) 0%, rgba(255, 255, 255, 0.726) 100%);*/
 }
@@ -319,7 +312,7 @@ nav {
 }
 
 .snap-section-2 {
-    min-height: 84vh;
+    /*min-height: 84vh;*/
     background-color: #ffffff;
     padding-bottom: 0px !important;
     padding: 120px 0;
@@ -497,7 +490,7 @@ h5,
 }
 
 .snap-section-3 {
-    min-height: 70vh;
+    /*min-height: 70vh;*/
     padding-bottom: 0px !important;
     padding: 0px 0;
 }
@@ -526,7 +519,7 @@ h5,
 
 .raise {
     --color: black;
-    --hover: #4807a8;
+    --hover: var(--clr-background-navbar);
 }
 
 button {
@@ -540,7 +533,7 @@ button {
 button:hover,
 button:focus {
     border-color: var(--hover);
-    color: #4807a8;
+    color: var(--clr-background-navbar);
 
 }
 
@@ -587,10 +580,11 @@ button {
     width: 40%;
 }
 
+/*
+al pasar por arriba de la img se genera un borde luminoso
 .content-img-text img:hover {
     box-shadow: 0 0 20px var(--clr-primary);
-    ;
-}
+}*/
 
 .habi-png {
     padding: 55px;
@@ -647,12 +641,12 @@ hr {
 }
 
 
-.footer {
+/*.footer {
     min-height: 30vh;
-}
+}*/
 
 .codermex {
-    min-height: 24vh;
+    /*min-height: 24vh;*/
     padding: 10px;
 }
 
