--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,11 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <!--Conectamos css,boostrap,js-->
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="scss/styles.scss" />
 
     <!--icon para titulo-->
-    <link rel="icon" href="logos\valorant.svg">
+    <link rel="icon" href="media\logos\valorant.svg">
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -33,7 +33,7 @@
     <!--ENCABEZADO-->
     <nav class="navbar navbar-expand-lg navbar-color-1">
         <div class="container-fluid">
-            <a class="navbar-brand navbar-dark" href="index.html"><img src="img/Lobo-blanco.png" style="height: 30px;
+            <a class="navbar-brand navbar-dark" href="index.html"><img src="/media/img/Lobo-blanco.png" style="height: 30px;
                 width: 30px;left:-4px;">CODERMEX</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,7 +110,7 @@
                                 capacitación formal.
                             </p>
                             <p>&nbsp;</p>
-                            <img src="img/Lobo.png" style="height: 100px; width: 100px;">
+                            <img src="/media/img/Lobo.png" style="height: 100px; width: 100px;">
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom"
                                 style="text-align: center;">
                                 ¿Sos desarrollador?, ¿Te intere saber el codigo de la pagina WEB?</p>
@@ -129,32 +129,32 @@
             </div>
             <div class="habi center d-flex">
                 <div class="content-img-text center d-flex">
-                    <img src="img/1686405422859 (1).jpg" alt="foto de perfil">
+                    <img src="/media/img/1686405422859 (1).jpg" alt="foto de perfil">
                 </div>
                 <div class="habi-png center d-flex">
-                    <img src="img/png/html.png" alt="habi html" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/html.png" alt="habi html" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="HTML">
-                    <img src="img/png/css.png" alt="habi css" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/css.png" alt="habi css" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="CSS">
-                    <img src="img/png/javascript.png" alt="habi javascript" data-bs-toggle="tooltip"
+                    <img src="/media/img/png/javascript.png" alt="habi javascript" data-bs-toggle="tooltip"
                         data-bs-placement="top" title="javascript">
-                    <img src="img/png/bootstrap.png" alt="habi bootstrap" data-bs-toggle="tooltip"
+                    <img src="/media/img/png/bootstrap.png" alt="habi bootstrap" data-bs-toggle="tooltip"
                         data-bs-placement="top" title="bootstrap">
-                    <img src="img/png/python.png" alt="habi python" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/python.png" alt="habi python" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="python">
-                    <img src="img/png/django.png" alt="habi django" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/django.png" alt="habi django" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="django">
-                    <img src="img/png/sqlserver.png" alt="habi sql server" data-bs-toggle="tooltip"
+                    <img src="/media/img/png/sqlserver.png" alt="habi sql server" data-bs-toggle="tooltip"
                         data-bs-placement="top" title="sql server">
-                    <img src="img/png/mongodb.png" alt="habi mongodb" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/mongodb.png" alt="habi mongodb" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="mongodb">
-                    <img src="img/png/git.png" alt="habi git" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/git.png" alt="habi git" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="git">
-                    <img src="img/png/github.png" alt="habi github" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/github.png" alt="habi github" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="github">
-                    <img src="img/png/visualcode.png" alt="habi vscode" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/visualcode.png" alt="habi vscode" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="vscode">
-                    <img src="img/png/vb6.png" alt="habi vb6" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <img src="/media/img/png/vb6.png" alt="habi vb6" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="vb6">
                 </div>
             </div>
@@ -207,7 +207,7 @@
             </div>
         </footer>
     </section>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
