--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -25,7 +25,7 @@ body {
     color: #626262;
     line-height: 35px;
     background-color: #ffffff;
-    background-image: url('img/pruebas.jpg');
+    background-image: url('/media/img/pruebas.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -126,7 +126,7 @@ nav {
 }
 
 .snap-section-1 {
-    /*background-image: url('img/fondo_blue.jpg');
+    /*background-image: url('/media/img/fondo_blue.jpg');
     color: #f5f5f5;*/
     width: 100%;
     height: inherit;
@@ -545,7 +545,7 @@ button {
 }
 
 .snap-section-3 {
-    background-image: url('img/net-gris.jpg');
+    background-image: url('/media/img/net-gris.jpg');
     width: 100%;
     /*background-color: #dfdcdc;*/
     /*background: linear-gradient(60deg, #4876BD, #5448BD, #8F48BD, #BD48B1 100%);*/
